2002-10-27  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* datastruct/simplelist.c :
	* datastruct/simplelist.h :
	* datastruct/stringlist.c :

	  - Now uses the globally-defined error codes.

	* exp/comp_atom.c :
	* exp/comp_atom.h :
	* exp/comp_exp.c :
	* exp/expression.h :
	* exp/gnd_atom.c :
	* exp/gnd_atom.h :
	* exp/gnd_exp.c :
	* exp/gnd_exp.h :
	* main/epilog.c :
	* parser/parser.y :
	* trans/transtab.c :

	  - Now uses the macro-defined truth symbols and result types. got
	    rid of res_type and truth_type.

	* Makefile :
	* common/Makefile :
	* common/epilog.h :

	  - Added a global common header file that defines: version,
	    error codes, boolean and result constants.

	* datastruct/simplelist.c :
	* datastruct/simplelist.h :
	* datastruct/stringlist.c :
	* datastruct/stringlist.h :

	  - Unified error codes / return values for both lists.

2002-10-26  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* datastruct/stringlist.c :
	* datastruct/stringlist.h :

	  - More errorcodes.

	* datastruct/simplelist.c :
	* datastruct/simplelist.h :

	  - Added errorcodes for return values.

	  - Some cleanups.

	* exp/comp_exp.c :
	* exp/comp_exp.h :
	* exp/gnd_exp.c :
	* exp/gnd_exp.h :

	  - Removed unnecessary delete function. May have caused
	    inconsistencies in the expressions.

2002-10-20  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* exp/gnd_exp.c :

	  - Fixed the error that causes the check of whether the
	    negation of an atom is already present to fail.

	  - Fixed bug that adds an atom even though its negation is
	    already there.

	  - add function now allows an atom to be replaced by its negation
	    IF AND ONLY IF it is not implied by any other atom.

	* exp/gnd_atom.h :
	* exp/gnd_atom.c :

	  - Changed copy function to simply copy the atom without
	    allocating memory (analogous strcpy).

	  - Added dup function to allocate memory and copy the atom.
	    (analogous to strdup).

	* exp/gnd_exp.c :
