@@ -1,5 +1,16 @@
 2002-10-27  Vino Crescini  <jcrescin@cit.uws.edu.au>
 
+	* ident.c :
+	* ident.h :
+	* identlist.c :
+	* identlist.h :
+	* symtab.c :
+	* symtab.h :
+
+	  - Used error codes.
+
+	  - Some cleanup.
+
 	* datastruct/simplelist.c :
 	* datastruct/simplelist.h :
 	* datastruct/stringlist.c :
